Update docker-compose and Dockerfile to change exposed port to 3002 and enhance CORS configuration with environment variable support