@@ -1,21 +1,46 @@
 package dev.jgrove2.notes_backend.Config;
 
 import jakarta.servlet.http.HttpServletRequest;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Component
 public class CustomCorsConfiguration implements CorsConfigurationSource {
+
+    @Value("${cors.allowed-origins:http://localhost:3000,http://127.0.0.1:3000}")
+    private String allowedOrigins;
+
+    @Value("${cors.allowed-methods:GET,POST,PUT,DELETE}")
+    private String allowedMethods;
+
+    @Value("${cors.allowed-headers:*}")
+    private String allowedHeaders;
+
     @Override
     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(
-                List.of("http://localhost:3000", "http://127.0.0.1:3000", "https://notes-alpha.netlify.app/"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
-        config.setAllowedHeaders(List.of("*"));
+
+        // Parse comma-separated origins
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOrigins(origins);
+
+        // Parse comma-separated methods
+        List<String> methods = Arrays.asList(allowedMethods.split(","));
+        config.setAllowedMethods(methods);
+
+        // Parse comma-separated headers (or use wildcard)
+        if ("*".equals(allowedHeaders)) {
+            config.setAllowedHeaders(List.of("*"));
+        } else {
+            List<String> headers = Arrays.asList(allowedHeaders.split(","));
+            config.setAllowedHeaders(headers);
+        }
+
         return config;
     }
 }
